--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "tuple"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "5.22"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "dict"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "dict_keys(['name', 'age'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "dict_values([['a', 'b', 'c', 'd'], [25, 26, 24, 28]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "['a', 'b', 'c', 'd']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "['a', 'b']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "dict_keys"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -356,16 +356,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "140733583627176"
+       "140733635138472"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,21 +376,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable   Type         Data/Info\n",
-      "---------------------------------\n",
-      "f          list         n=9\n",
-      "s          dict         n=2\n",
-      "t          tuple        n=10\n",
-      "tempList   dict_keys    dict_keys(['age', 'Fullname'])\n",
-      "x          int          5\n",
-      "y          int          895\n"
+      "Variable            Type         Data/Info\n",
+      "------------------------------------------\n",
+      "add                 function     <function add at 0x0000024DEDDDFCE0>\n",
+      "areaOfCircle        function     <function areaOfCircle at 0x0000024DEDDDFE20>\n",
+      "convertToHrs        function     <function convertToHrs at 0x0000024DEDE50540>\n",
+      "cube                function     <function cube at 0x0000024DEAFD8F40>\n",
+      "cubeList            list         n=26\n",
+      "cubeRoot            function     <function cubeRoot at 0x0000024DEDE50220>\n",
+      "evenList            list         n=16\n",
+      "f                   list         n=9\n",
+      "findVolume          function     <function findVolume at 0x0000024DEDF6C680>\n",
+      "h                   list         n=16\n",
+      "i                   int          50\n",
+      "l                   list         n=7\n",
+      "list                list         n=7\n",
+      "math                module       <module 'math' (built-in)>\n",
+      "minutes             int          185\n",
+      "mul                 function     <function mul at 0x0000024DEDDDF7E0>\n",
+      "oddList             list         n=15\n",
+      "perimeterOfCircle   function     <function perimeterOfCirc<...>le at 0x0000024DEDE504A0>\n",
+      "pi                  float        3.142857142857143\n",
+      "s                   dict         n=2\n",
+      "sqList              list         n=25\n",
+      "square              function     <function square at 0x0000024DEDE502C0>\n",
+      "squareRoot          function     <function squareRoot at 0x0000024DEDE500E0>\n",
+      "t                   tuple        n=10\n",
+      "tempList            dict_keys    dict_keys(['age', 'Fullname'])\n",
+      "v                   str          aeiou\n",
+      "vol_cuboid          function     <function vol_cuboid at 0x0000024DEDE50680>\n",
+      "vol_hemisphere      function     <function vol_hemisphere at 0x0000024DEDEF7880>\n",
+      "vol_sphere          function     <function vol_sphere at 0x0000024DEDEF4360>\n",
+      "x                   int          5\n",
+      "y                   int          895\n"
      ]
     }
    ],
@@ -400,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -743,6 +768,294 @@
     "\n",
     "print(sqList)\n",
     "print(cubeList)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(var1, var2):\n",
+    "    return var1+var2\n",
+    "\n",
+    "print(add(1, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#multiply function\n",
+    "\n",
+    "def mul(n1, n2):\n",
+    "    return n1*n2\n",
+    "\n",
+    "print(mul(2, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n",
+      "25\n",
+      "3.0\n",
+      "9.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create a function for cube\n",
+    "#create a function for square\n",
+    "#create a function for cube root\n",
+    "#create a function for square root\n",
+    "\n",
+    "\n",
+    "def cube(num):\n",
+    "    return num**3\n",
+    "\n",
+    "def square(num):\n",
+    "    return num**2\n",
+    "\n",
+    "def cubeRoot(num):\n",
+    "    return num**(1/3)\n",
+    "\n",
+    "def squareRoot(num):\n",
+    "    return num**(1/2)\n",
+    "\n",
+    "print(cube(3))\n",
+    "print(square(5))\n",
+    "print(cubeRoot(27))\n",
+    "print(squareRoot(81))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 Hrs 5 mins\n"
+     ]
+    }
+   ],
+   "source": [
+    "# convert and print the hours by using minutes\n",
+    "\n",
+    "minutes = 185\n",
+    "\n",
+    "def convertToHrs(mins):\n",
+    "    print(mins//60, \"Hrs\", mins%60, \"mins\")\n",
+    "    \n",
+    "convertToHrs(minutes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153.93\n",
+      "43.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a function to calculate area of circle\n",
+    "# Create a function to calculate perimeter of circle\n",
+    "\n",
+    "pi = 3.1415\n",
+    "def areaOfCircle(rad):\n",
+    "    return pi*(rad**2)\n",
+    "\n",
+    "def perimeterOfCircle(rad):\n",
+    "    return 2*pi*rad\n",
+    "\n",
+    "print(round(areaOfCircle(7), 2))\n",
+    "print(round(perimeterOfCircle(7), 2))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150\n"
+     ]
+    }
+   ],
+   "source": [
+    "def vol_cuboid(l, b, h):\n",
+    "    return l*b*h\n",
+    "\n",
+    "print(vol_cuboid(3, 5, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Volume of sphere 268.19\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate and print the volume of sphere\n",
+    "\n",
+    "pi = 22/7\n",
+    "def vol_sphere(rad):\n",
+    "    return (4/3)*pi*(rad**3)\n",
+    "\n",
+    "print(\"Volume of sphere\", round(vol_sphere(4), 2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Volume of hemisphere 134.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate and print the volume of hemisphere\n",
+    "\n",
+    "pi = 22/7\n",
+    "def vol_hemisphere(rad):\n",
+    "    return (2/3)*pi*(rad**3)\n",
+    "\n",
+    "print(\"Volume of hemisphere\", round(vol_hemisphere(4), 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "84\n",
+      "905.142857142857\n"
+     ]
+    }
+   ],
+   "source": [
+    "# write a program to calculate the volumes of sphere and cuboid \n",
+    "\n",
+    "def findVolume(name):\n",
+    "    if(name.lower()==\"cuboid\"):\n",
+    "       print(vol_cuboid(3, 4, 7))\n",
+    "    elif(name.lower()==\"sphere\"):\n",
+    "        print(vol_sphere(6))\n",
+    "\n",
+    "findVolume(\"cuboid\")\n",
+    "findVolume(\"sphere\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "157.14285714285714\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a function to find the area and perimeter\n",
+    "\n",
+    "def csa_hemisphere(rad):\n",
+    "    return 2*pi*(rad**2)\n",
+    "\n",
+    "print(csa_hemisphere(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'csa_hemisphere' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[90], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m(name\u001b[38;5;241m.\u001b[39mlower()\u001b[38;5;241m==\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvol\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28mprint\u001b[39m(vol_hemisphere(\u001b[38;5;241m8\u001b[39m))\n\u001b[1;32m----> 7\u001b[0m \u001b[43mfindCurvedArea_Volume_of_hemisphere\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcsa\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m findCurvedArea_Volume_of_hemisphere(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvol\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[90], line 3\u001b[0m, in \u001b[0;36mfindCurvedArea_Volume_of_hemisphere\u001b[1;34m(name)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfindCurvedArea_Volume_of_hemisphere\u001b[39m(name):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m(name\u001b[38;5;241m.\u001b[39mlower()\u001b[38;5;241m==\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsa\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m----> 3\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[43mcsa_hemisphere\u001b[49m(\u001b[38;5;241m7\u001b[39m))\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m(name\u001b[38;5;241m.\u001b[39mlower()\u001b[38;5;241m==\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvol\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28mprint\u001b[39m(vol_hemisphere(\u001b[38;5;241m8\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'csa_hemisphere' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def findCurvedArea_Volume_of_hemisphere(name):\n",
+    "    if(name.lower()==\"csa\"):\n",
+    "        print(csa_hemisphere(7))\n",
+    "    elif(name.lower()==\"vol\"):\n",
+    "        print(vol_hemisphere(8))\n",
+    "        \n",
+    "findCurvedArea_Volume_of_hemisphere(\"csa\")\n",
+    "findCurvedArea_Volume_of_hemisphere(\"vol\")"
    ]
   }
  ],
